Impl. botão de novo jogo + display de turno

--- a/js/style.css
+++ b/js/style.css
@@ -11,9 +11,9 @@ body {
 	background-color: var(--bg-color);
 }
 
-body, .controls { display: flex; }
+body, .controls, .controls > div { display: flex; }
 body, .controls { flex-direction: column; }
-body, .controls { align-items: center; }
+body, .controls, .controls > div:first-of-type { align-items: center; }
 
 .controls {
 	width: 100%;
@@ -37,4 +37,46 @@ body, .controls { align-items: center; }
 .controls text.outline {
 	 stroke: var(--board-color);
 	 stroke-width: 6px;
+}
+
+.controls button {
+	appearance: none;
+	padding: 4px 8px;
+	text-transform: uppercase;
+	color: var(--board-color);
+	background-color: var(--bg-color);
+	border: 2px solid var(--board-color);
+	border-radius: 2px;
+	cursor: pointer;
+}
+
+.controls button:hover {
+	color: var(--bg-color);
+	background-color: var(--board-color);
+	border-color: var(--bg-color);
+	outline: 2px solid var(--board-color);
+}
+
+.controls button {
+	font-size: 1.2rem;
+	font-weight: 600;
+}
+
+.controls > div:first-of-type {
+	height: fit-content;
+	min-height: 64px;
+	padding: 0 17.5px;
+}
+
+.turn {
+	margin: 0 17.5px;
+	font-size: 1.5rem;
+	text-align: center;
+	color: var(--board-color);
+}
+
+.turn span {
+	position: relative;
+	top: 4px;
+	font-weight: bolder;
 }
