--- a/angular/tic-tac-toe/src/app/components/board/board.component.html
+++ b/angular/tic-tac-toe/src/app/components/board/board.component.html
@@ -2,7 +2,7 @@
 	<app-cell
 		*ngFor="let cell of service.cellList"
 		[cell]="cell"
-		[gameOngoing]="service.gameOngoing"
+		[gameOngoing]="service.gameOnGoing"
 		(play)="service.makeMove($event)"
 	></app-cell> 
 </div>
